[package]
name = "asset_minting"
version = "0.9.0"
authors = ["puneet <puneet@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# For quicker tests, cargo test --lib. for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces", "cosmwasm-vm/backtraces"]

[dependencies]
cosmwasm-std = "0.14.0"
schemars = "0.8"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
serde_json = "1.0.55"
thiserror = "1.0.23"
cosmwasm-storage = "0.14.0"
log = "0.4.14"


[dev-dependencies]
cosmwasm-schema = "0.14.0"
cosmwasm-vm = { version = "0.14.0", default-features = false }
